c4prj2_input/grade.txt
Grading at Thu Mar 11 08:49:11 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:13:53: error: request for member ‘value’ in something not a structure or union
     fc->decks[index].cards[fc->decks[index].n_cards].value = ptr->value;
                                                     ^
future.c:14:53: error: request for member ‘suit’ in something not a structure or union
     fc->decks[index].cards[fc->decks[index].n_cards].suit = ptr->suit;
                                                     ^
future.c:26:53: error: request for member ‘value’ in something not a structure or union
     fc->decks[index].cards[fc->decks[index].n_cards].value = ptr->value;
                                                     ^
future.c:27:53: error: request for member ‘suit’ in something not a structure or union
     fc->decks[index].cards[fc->decks[index].n_cards].suit = ptr->suit;
                                                     ^
Compilation of future.c failed

Overall Grade: F
